--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </span>
                 <div class="hidden md:flex space-x-8 font-mono text-sm tracking-wide">
                     <a href="#lyrics" class="hover:text-neuro-pink transition-colors">LYRICS</a>
-                    <a href="#memes" class="hover:text-neuro-violet transition-colors">MEME VAULT</a>
+                    <a href="#memes" class="hover:text-neuro-violet transition-colors">ONTOLOGICAL NOISE</a>
                     <a href="#about" class="hover:text-white transition-colors">ABOUT</a>
                 </div>
                 <!-- Mobile Menu Button -->
@@ -112,7 +112,7 @@
                     GET THE LYRICS
                 </a>
                 <a href="#memes" class="px-8 py-4 font-mono font-bold border-2 border-neuro-pink text-neuro-pink hover:bg-neuro-pink hover:text-white transition-all">
-                    ENTER THE MEME ZONE
+                    WHO ARE WE AND WHAT IS OUR PURPOSE
                 </a>
             </div>
         </div>
@@ -497,9 +497,9 @@
         <div class="max-w-6xl mx-auto px-6">
             <div class="text-center mb-16">
                 <h2 class="text-5xl md:text-7xl font-black text-transparent bg-clip-text bg-gradient-to-r from-neuro-pink to-neuro-violet mb-4">
-                    THE MEME VAULT
+                    ONTOLOGICAL NOISE
                 </h2>
-                <p class="font-mono text-white">Visual data collected from the void.</p>
+                <p class="font-mono text-white">Farm to table.</p>
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
