--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     GET THE LYRICS
                 </a>
                 <a href="#memes" class="px-8 py-4 font-mono font-bold border-2 border-neuro-pink text-neuro-pink hover:bg-neuro-pink hover:text-white transition-all">
-                    WHO ARE WE AND WHAT IS OUR PURPOSE
+                    WHO ARE WE AND WHAT IS OUR PURPOSE?
                 </a>
             </div>
         </div>
@@ -509,7 +509,7 @@
                     <div class="bg-black aspect-square flex items-center justify-center overflow-hidden relative">
                          <!-- Placeholder for Meme -->
                             
-                        <img src="doran_entropy.jpg" class="w-full h-full object-cover" alt="Meme description">
+                        <img src="doran_entropy.jpg" class="w-full h-full object-cover" alt="Doran">
                          </div>
                     </div>
                     <div class="p-4 bg-gray-900">
@@ -520,7 +520,7 @@
                 <!-- Meme 2 -->
                 <div class="meme-card bg-gray-800 p-2 border-2 border-transparent transition-all duration-300">
                     <div class="bg-black aspect-square flex items-center justify-center overflow-hidden relative">
-                         <img src="shakira_paul.jpg" class="w-full h-full object-cover" alt="Meme description">
+                         <img src="shakira_paul.jpg" class="w-full h-full object-cover" alt="omg that's Shakira and Paul McCartney">
                             </div>
                             <span class="font-mono text-sm">"Just read the lyrics again."</span>
                          </div>
@@ -533,11 +533,7 @@
                 <!-- Meme 3 -->
                 <div class="meme-card bg-gray-800 p-2 border-2 border-transparent transition-all duration-300">
                     <div class="bg-black aspect-square flex items-center justify-center overflow-hidden relative">
-                         <div class="absolute inset-0 flex flex-col items-center justify-center bg-gradient-to-br from-neuro-pink to-neuro-violet p-4 text-center">
-                            <span class="font-black text-white text-3xl uppercase leading-none transform -rotate-6">Farl Kriston</span>
-                            <span class="font-mono text-xs bg-black text-white px-2 py-1 mt-2">exists</span>
-                            <span class="font-black text-white text-3xl uppercase leading-none transform rotate-6 mt-4">The Mouse</span>
-                         </div>
+                        <img src="neurotypical_meme.jpeg" class="w-full h-full object-cover" alt="Meme description">
                     </div>
                     <div class="p-4 bg-gray-900">
                         <p class="font-mono text-xs text-neuro-white">#bandlore</p>
